# rust_func

./: Cargo.toml  deploy.bat  startFunc.bat  wdeploy.bat
src/: main.rs
