[package]
name = "handler"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
generic-array = "0.10.1"
num-traits = "0.2.14"
numeric-array = "0.5.2"
rayon = "1.5.1"
